# deepsight

./: .gitignore  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: BottomPanel.tsx  ChartArea.tsx  DeltaPanel.tsx  MarketStatusBar.tsx  OrderModal.tsx  RightPanel.tsx  TopNav.tsx
components/ChartTopNav/: ChartTypeSelector.tsx  IndicatorsDropdown.tsx  IntervalSelector.tsx  OrderFlowDropdown.tsx  PairSelector.tsx  UserMenu.tsx  constants.tsx  index.tsx  shared.tsx  types.ts
components/ui/: icons.tsx
contexts/: ThemeContext.tsx
deepsight-server/: Cargo.toml  build.rs
deepsight-server/src/: deepbook.rs  main.rs  types.rs  websocket.rs
