[package]
name = "deepsight-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
tonic = "0.14.5"
prost = "0.14.3"

[build-dependencies]
tonic-build = "0.12"
